--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.19.2",
     "express-fileupload": "^1.5.0",
     "express-handlebars": "^7.1.2",
+    "express-validator": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.12.0",
     "uuid": "^10.0.0"
